add Lindsay data

--- a/_toc.yml
+++ b/_toc.yml
@@ -103,3 +103,22 @@ chapters:
   - file: power_analysis.ipynb
   - file: power_placeholder.md
   - file: CSVreading_instructions.ipynb
+- file: regression1_intro.md
+  sections:
+  - file: regression1_outcomes.md
+  - file: regression1_concepts.md
+  - file: regression1_interpretingSlope.md
+  - file: regression1_QandA.md
+  - file: regression1_prepwork.ipynb
+  - file: regression1_TutorialExercises.ipynb
+- file: regression2_intro.md
+  sections:
+  - file: regression2_outcomes.md
+  - file: regression2_concepts.md
+  - file: regression2_typesOfRelationship.md
+  - file: regression2_QandA.md
+  - file: regression2_TutorialExercises.ipynb
+  
+
+  
+  
